--- a/CV.html
+++ b/CV.html
@@ -15,7 +15,7 @@
         </div>
        
      <ul class="navarea">
-         <li><a href="index.html">Home</a></li>
+         <li><a class="active" href="index.html">Home</a></li>
          <li><a href="portfolio.html">Portfolio</a></li>
          <li><a href="CV.html">CV</a></li>
          <li><a href="Contact.html">Contact</a></li>
